<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RelativesChat</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login">登录</string>
    <string name="change_account_login">切换账号</string>
    <string name="user_account">用户账号</string>
    <string name="user_password">用户密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="user_email">邮箱</string>
    <string name="forget_password">忘记密码</string>
    <string name="regist_account">注册</string>
    <string name="find_password">找回密码</string>
    <string name="title_activity_regist_account">注册</string>
    <string name="introduce_text">跟你的亲人多聊聊天吧!</string>
    <string name="items_app">点击注册按钮表示你接收本应用的所有条款</string>
    <string name="user_forget_account">你忘记密码的账号</string>
    <string name="user_forget_email">你注册账号时的邮箱</string>
    <string name="relatives_friends_list_text">亲朋列表</string>
    <string name="friends_activity_text">亲朋动态</string>
    <string name="more_info_text">更多</string>
    <string name="dialog_title_notify">提示</string>
    <string name="dialog_content_notify">使用对话框出错</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_fail">注册失败</string>
    <string name="network_not_access">没有连接网络</string>
    <string name="account_or_password_not_complete">请先输入用户名和密码</string>
    <string name="username_password_incorrect">用户名或密码不正确</string>
    <string name="password_not_correct_with_former">密码前后不一致</string>
    <string name="regist_information_not_complete">注册信息不完整</string>
    <string name="please_wait">请稍候...</string>
    <string name="no_friends_notify">你现在没有朋友，赶紧去更多选项里面添加好友吧!</string>
    <string name="title_activity_find_friends">FindFriendsActivity</string>
    <string name="find_friends">查找好友</string>
    <string name="find_friends_name">请输入要查找的好友的名字</string>
    <string name="add_friends">加为好友</string>
    <string name="invite_friends">好友验证消息</string>
    <string name="agree_add_friends">同意</string>
    <string name="add_avator">头像</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="modefy_user_image">修改我的图像</string>
    <string name="modefy_user_state">修改我的状态</string>
    <string name="commit">确认</string>
    <string name="cancle">取消</string>
    <string name="modefy_user_nick">修改我的昵称</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册中选</string>
    <string name="qr_code">探索二维码</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="share_to_tencent">分享到腾讯微博</string>
    <string name="share_to_sina">分享到新浪微博</string>
    <string name="main_menu_user_text">我的好友</string>
    <string name="main_menu_user_image">好友的分享</string>
    <string name="main_menu_user_photo">分享萌图片</string>
    <string name="main_menu_user_sound">分享声音</string>
    <string name="main_menu_user_video">分享短视频</string>
    <string name="main_menu_user_location">好友位置</string>
    <string name="main_menu_user_setting">设置</string>
    <string name="main_menu_user_no_user">暂时没有好友</string>
    <string name="main_menu_user_no_videos">暂时没有好友分享视频</string>
    <string name="my_friends_name">好友名字：</string>
    <string name="my_friends_sign">好友签名：</string>
    <string name="pen_color">画笔颜色</string>
    <string name="redraw_image">重画</string>
    <string name="send">发送</string>
    <string name="save_to_local">本地保存</string>
    <string name="title_activity_friend_share">FriendShareActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_watch_share_image">WatchShareImageActivity</string>
    <string name="title_activity_feedback_friends_share">FeedbackFriendsShareActivity</string>
    <string name="title_activity_share_sound_to_friends">ShareSoundToFriendsActivity</string>
    <string name="title_activity_share_video_to_friends">ShareVideoToFriendsActivity</string>
    <string name="title_activity_record_video_to_server">RecordVideoToServerActivity</string>
    <string name="title_activity_review_recorded_video">ReviewRecordedVideoActivity</string>
    <string name="title_activity_play_shared_video">PlaySharedVideoActivity</string>
    <string name="title_activity_friends_location">FriendsLocationActivity</string>

</resources>
