<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity" >

	<View android:id="@+id/blank_one"
        android:layout_width="fill_parent"
        android:layout_height="72dp"/>
    
    <EditText android:id="@+id/forget_account_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
       	android:layout_centerHorizontal="true"
       	android:textSize="20sp"
       	android:hint="@string/user_forget_account"
        android:layout_below="@+id/blank_one"
        android:background="@drawable/edittext_select_style"/>
    
   <View android:id="@+id/blank_two"
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/forget_account_edit"/>
    
    <EditText android:id="@+id/forget_email_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
       	android:layout_centerHorizontal="true"
       	android:textSize="20sp"
       	android:inputType="textEmailAddress"
       	android:hint="@string/user_forget_email"
        android:layout_below="@+id/blank_two"
        android:background="@drawable/edittext_select_style"/>
    
    <View android:id="@+id/blank_three"
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/forget_email_edit"/>
    
     <Button android:id="@+id/find_user_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
       	android:layout_centerHorizontal="true"
       	android:textSize="20sp"
       	android:textColor="@color/white"
       	android:text="@string/find_password"
        android:layout_below="@+id/blank_three"
        android:background="@drawable/login_btn_background"/>

</RelativeLayout>
