<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modify_info_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModefyUserInfoActivity" >

        <include
        android:id="@+id/modefy_user_info_layout"
        layout="@layout/friends_menu_header_layout" />
    
    <LinearLayout 
        android:id="@+id/modefy_user_icon_layout"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modefy_user_info_layout"
        android:orientation="vertical">
        
   		<TextView android:id="@+id/change_image_text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"
		    android:gravity="left"
		    android:layout_gravity="center"
		    android:text="@string/modefy_user_image"/>	
		    
		<ImageView android:id="@+id/user_icon_image"
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:layout_alignParentLeft="true"
		    android:src="@drawable/default_head"
		    android:layout_weight="0.2"/>
	</LinearLayout>
	
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/modefy_user_icon_layout"
        android:id="@+id/blank_text_1"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/modefy_user_state"
        android:layout_below="@+id/blank_text_1"
        android:id="@+id/blank_text_5"/>
	
    <EditText android:id="@+id/modefy_user_state_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blank_text_5"
        android:textSize="20sp"
        android:background="@drawable/edittext_select_style"
        android:hint="@string/modefy_user_state"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/modefy_user_state_edit"
        android:id="@+id/blank_text_2"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/modefy_user_nick"
        android:layout_below="@+id/blank_text_2"
        android:id="@+id/blank_text_3"/>
	
    <EditText android:id="@+id/modefy_user_nick_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blank_text_3"
        android:textSize="20sp"
        android:background="@drawable/edittext_select_style"
        android:hint="@string/modefy_user_nick"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/modefy_user_nick_edit"
        android:id="@+id/blank_text_4"/>
    
    <Button android:id="@+id/modefy_user_info_ok_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blank_text_4"
        android:text="@string/commit"
        android:gravity="center"
        android:background="@drawable/login_btn_background"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</RelativeLayout>
