<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="11"
    android:background="@drawable/main_menu_background"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:id="@+id/main_menu_user_layout"
        style="@drawable/background_selector"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_nomal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/user_layout_child_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/user_icon_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/main_menu_user_selector" />

            <TextView
                android:id="@+id/my_friends_number_text"
                style="@style/text_xlarge_white"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="@string/main_menu_user_no_user" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_menu_user_text"
            style="@style/text_xlarge_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/main_menu_user_text" />
    </LinearLayout>

    <View
        android:id="@+id/blank_1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"/>

    <LinearLayout
        android:id="@+id/main_menu_sound_photo_layout"
        style="@drawable/background_selector"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sound_photo_layout_child_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/sound_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:background="@drawable/background_nomal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/sound_icon_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_menu_sound_selector" />

                <TextView
                    android:id="@+id/my_sound_text"
                    style="@style/text_xlarge_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical"
                    android:text="@string/main_menu_user_sound" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:background="@color/transparent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_layout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.49"
                android:background="@drawable/background_nomal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/photo_icon_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_menu_photo_selector" />

                <TextView
                    android:id="@+id/my_photo_text"
                    style="@style/text_xlarge_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical"
                    android:text="@string/main_menu_user_photo" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/blank_2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"/>

    <LinearLayout
        android:id="@+id/main_menu_video_layout"
        style="@drawable/background_selector"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_nomal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/video_layout_child_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/user_video_image"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:background="@drawable/main_menu_video_selector" />

            <TextView
                android:id="@+id/my_videos_number_text"
                style="@style/text_xlarge_white"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.4"
                android:gravity="fill_vertical"
                android:text="@string/main_menu_user_no_videos" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_menu_video_text"
            style="@style/text_xlarge_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/main_menu_user_video" />
    </LinearLayout>

    <View
        android:id="@+id/blank_3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" />

    <LinearLayout
        android:id="@+id/main_menu_image_music_layout"
        style="@drawable/background_selector"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/image_music_layout_child_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.39"
                android:background="@drawable/background_nomal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_icon_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_menu_image_selector" />

                <TextView
                    android:id="@+id/my_image_text"
                    style="@style/text_xlarge_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical"
                    android:text="@string/main_menu_user_image" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.02"
                android:background="@color/transparent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music_layout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.59"
                android:background="@drawable/background_nomal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/music_icon_image"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/main_menu_music_selector" />

                <TextView
                    android:id="@+id/my_music_text"
                    style="@style/text_xlarge_white"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:gravity="fill_vertical"
                    android:text="@string/main_menu_user_music" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/blank_4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" />

    <LinearLayout
        android:id="@+id/main_menu_setting_layout"
        style="@drawable/background_selector"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_nomal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/user_setting_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_setting_selector" />

        <TextView
            android:id="@+id/main_menu_setting_text"
            style="@style/text_xlarge_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/main_menu_user_setting" />
    </LinearLayout>

</LinearLayout>